@@ -56,6 +56,7 @@ msg_sequence_test:
 	./02-subpub-qos2-receive-maximum-1.py
 	./02-subpub-qos2-receive-maximum-2.py
 	./02-subpub-qos2.py
+	./02-subpub-recover-subscriptions.py
 	./02-subscribe-dollar-v5.py
 	./02-subscribe-invalid-utf8.py
 	./02-subscribe-long-topic.py
