@@ -36,6 +36,7 @@ tests = [
     (1, './02-subpub-qos2-receive-maximum-1.py'),
     (1, './02-subpub-qos2-receive-maximum-2.py'),
     (1, './02-subpub-qos2.py'),
+    (1, './02-subpub-recover-subscriptions.py'),
     (1, './02-subscribe-dollar-v5.py'),
     (1, './02-subscribe-invalid-utf8.py'),
     (1, './02-subscribe-long-topic.py'),
